--- a/frontend/front-cinema/package.json
+++ b/frontend/front-cinema/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.16.13",
+    "js-cookie": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "@types/jest": "^26.0.24",
+    "@types/js-cookie": "^3.0.1",
     "@types/node": "^12.20.36",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11"
