--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
-DB_USER=postgres
-DB_PASSWORD=
+DB_USER=dron61
+DB_PASSWORD=123
 DB_HOST=localhost
-DB_PORT=5432
+DB_PORT=5500
 DATABASE=node_pg_test
